@@ -1,3 +1,6 @@
+Changelog for version Xdx (2.5)
+  * Complete function key command entry support.
+
 Changelog for version Xdx (2.4.3)
   * Apply Debian patch from bug #577377.
   * Bring build system up to date for later versions of Autotools.
